--- a/p8105_hw3_dl3757.Rmd
+++ b/p8105_hw3_dl3757.Rmd
@@ -273,4 +273,20 @@ knitr::kable(total_number_of_rides,
              Separated by Casual Riders and Citi Bike Members")
 ```
 
-From the table, we can observe that more people joined the rides from 2020 to 2024. In addition, both the number of members and casual riders increased significantly, but the number of members is still much higher than that of casual riders. Furthermore, more people tend to ride in July than in January, regardless of whether it’s 2020 or 2024, likely due to better weather conditions in July.
+From the table, we can observe that more people joined the rides from 2020 to 2024. In addition, both the number of members and casual riders increased significantly, but the number of members is still much higher than that of casual riders. Furthermore, more people tend to ride in July than in January, regardless of whether it’s 2020 or 2024, likely due to better weather conditions in July. 
+
+## (c)
+```{r message = FALSE}
+# Produce a table showing the 5 most popular starting stations for July 2024
+popular_starting_stations <- tidy_dataset %>% 
+  filter(year == "2024" & month == "July") %>% 
+  group_by(start_station_name) %>% 
+  summarise(number_of_rides = n()) %>%
+  arrange(desc(number_of_rides)) %>% 
+  head(n = 5) %>% 
+  rename("Start Station Name" = start_station_name, 
+         "Number of Rides" = number_of_rides)
+
+knitr::kable(popular_starting_stations, 
+             caption = "The 5 Most Popular Starting Stations For July 2024")
+```
